@@ -13,10 +13,14 @@
  */
 package io.trino.plugin.deltalake;
 
+import com.google.common.collect.HashMultiset;
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
+import com.google.common.collect.ImmutableMultiset;
 import com.google.common.collect.ImmutableSet;
+import com.google.common.collect.Multiset;
 import io.airlift.units.Duration;
+import io.trino.filesystem.TrackingFileSystemFactory;
 import io.trino.filesystem.hdfs.HdfsFileSystemFactory;
 import io.trino.plugin.deltalake.transactionlog.AddFileEntry;
 import io.trino.plugin.deltalake.transactionlog.CommitInfoEntry;
@@ -59,6 +63,8 @@ import static com.google.common.collect.MoreCollectors.onlyElement;
 import static com.google.common.collect.Sets.union;
 import static io.airlift.slice.Slices.utf8Slice;
 import static io.airlift.testing.Assertions.assertEqualsIgnoreOrder;
+import static io.trino.filesystem.TrackingFileSystemFactory.OperationType.INPUT_FILE_GET_LENGTH;
+import static io.trino.filesystem.TrackingFileSystemFactory.OperationType.INPUT_FILE_NEW_STREAM;
 import static io.trino.plugin.deltalake.DeltaLakeColumnType.REGULAR;
 import static io.trino.plugin.deltalake.transactionlog.DeltaLakeSchemaSupport.extractColumnMetadata;
 import static io.trino.plugin.deltalake.transactionlog.TransactionLogParser.LAST_CHECKPOINT_FILENAME;
@@ -69,12 +75,15 @@ import static io.trino.testing.TestingConnectorSession.SESSION;
 import static io.trino.type.InternalTypeManager.TESTING_TYPE_MANAGER;
 import static java.lang.String.format;
 import static java.time.ZoneOffset.UTC;
+import static java.util.Collections.nCopies;
+import static java.util.Objects.requireNonNull;
+import static java.util.stream.Collectors.toCollection;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.testng.Assert.assertEquals;
 import static org.testng.Assert.assertFalse;
 import static org.testng.Assert.assertTrue;
 
-@Test(singleThreaded = true)
+@Test(singleThreaded = true) // e.g. TrackingFileSystemFactory is shared mutable state
 public class TestTransactionLogAccess
 {
     private static final Set<String> EXPECTED_ADD_FILE_PATHS = ImmutableSet.of(
@@ -99,10 +108,10 @@ public class TestTransactionLogAccess
             new RemoveFileEntry("age=42/part-00000-6aed618a-2beb-4edd-8466-653e67a9b380.c000.snappy.parquet", 1579190155406L, false),
             new RemoveFileEntry("age=42/part-00000-b82d8859-84a0-4f05-872c-206b07dd54f0.c000.snappy.parquet", 1579190163932L, false));
 
+    private final TrackingFileSystemFactory trackingFileSystemFactory = new TrackingFileSystemFactory(new HdfsFileSystemFactory(HDFS_ENVIRONMENT));
+
     private TransactionLogAccess transactionLogAccess;
     private TableSnapshot tableSnapshot;
-
-    private AccessTrackingFileSystemFactory accessTrackingFileSystemFactory;
 
     private void setupTransactionLogAccess(String tableName)
             throws Exception
@@ -122,7 +131,6 @@ public class TestTransactionLogAccess
         TestingConnectorContext context = new TestingConnectorContext();
         TypeManager typeManager = context.getTypeManager();
 
-        accessTrackingFileSystemFactory = new AccessTrackingFileSystemFactory(new HdfsFileSystemFactory(HDFS_ENVIRONMENT));
         FileFormatDataSourceStats fileFormatDataSourceStats = new FileFormatDataSourceStats();
 
         transactionLogAccess = new TransactionLogAccess(
@@ -130,14 +138,14 @@ public class TestTransactionLogAccess
                 new CheckpointSchemaManager(typeManager),
                 deltaLakeConfig,
                 fileFormatDataSourceStats,
-                accessTrackingFileSystemFactory,
+                trackingFileSystemFactory,
                 new ParquetReaderConfig());
 
         DeltaLakeTableHandle tableHandle = new DeltaLakeTableHandle(
                 "schema",
                 tableName,
                 "location",
-                Optional.empty(), // ignored
+                new MetadataEntry("id", "test", "description", null, "", ImmutableList.of(), ImmutableMap.of(), 0),
                 TupleDomain.none(),
                 TupleDomain.none(),
                 Optional.empty(),
@@ -157,7 +165,7 @@ public class TestTransactionLogAccess
     {
         setupTransactionLogAccess("person");
 
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
 
         assertEquals(metadataEntry.getCreatedTime(), 1579190100722L);
         assertEquals(metadataEntry.getId(), "b6aeffad-da73-4dde-b68e-937e468b1fdf");
@@ -176,7 +184,7 @@ public class TestTransactionLogAccess
             throws Exception
     {
         setupTransactionLogAccess("uppercase_columns");
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("ALA");
         assertThat(metadataEntry.getCanonicalPartitionColumns()).containsOnly("ala");
         assertEquals(tableSnapshot.getCachedMetadata(), Optional.of(metadataEntry));
@@ -263,11 +271,9 @@ public class TestTransactionLogAccess
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet");
 
         for (String path : overwrittenPaths) {
-            List<AddFileEntry> activeEntries = addFileEntries
-                    .stream()
+            List<AddFileEntry> activeEntries = addFileEntries.stream()
                     .filter(addFileEntry -> addFileEntry.getPath().equals(path))
-                    .collect(Collectors.toList());
-
+                    .toList();
             assertEquals(activeEntries.size(), 1);
             assertEquals(activeEntries.get(0).getModificationTime(), 9999999L);
         }
@@ -281,10 +287,9 @@ public class TestTransactionLogAccess
         List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
 
         // Test data contains an entry added by the parquet checkpoint, removed by a JSON action, and then added back by a later JSON action
-        List<AddFileEntry> activeEntries = addFileEntries
-                .stream()
+        List<AddFileEntry> activeEntries = addFileEntries.stream()
                 .filter(addFileEntry -> addFileEntry.getPath().equals("age=30/part-00002-5800be2e-2373-47d8-8b86-776a8ea9d69f.c000.snappy.parquet"))
-                .collect(Collectors.toList());
+                .toList();
 
         assertEquals(activeEntries.size(), 1);
         assertEquals(activeEntries.get(0).getModificationTime(), 9999999L);
@@ -343,7 +348,7 @@ public class TestTransactionLogAccess
         setupTransactionLogAccess(tableName);
 
         transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
-        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get();
+        MetadataEntry metadataEntry = transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION);
 
         assertThat(metadataEntry.getOriginalPartitionColumns()).containsOnly("age");
 
@@ -388,8 +393,7 @@ public class TestTransactionLogAccess
         setupTransactionLogAccess(tableName);
 
         try (Stream<ProtocolEntry> protocolEntryStream = transactionLogAccess.getProtocolEntries(tableSnapshot, SESSION)) {
-            List<ProtocolEntry> protocolEntries = protocolEntryStream.collect(Collectors.toList());
-
+            List<ProtocolEntry> protocolEntries = protocolEntryStream.toList();
             assertEquals(protocolEntries.size(), 1);
             assertEquals(protocolEntries.get(0).getMinReaderVersion(), 1);
             assertEquals(protocolEntries.get(0).getMinWriterVersion(), 2);
@@ -401,7 +405,6 @@ public class TestTransactionLogAccess
             throws Exception
     {
         String tableName = "person";
-        // setupTransactionLogAccess(tableName, new Path(getClass().getClassLoader().getResource("databricks/" + tableName).toURI()));
         File tempDir = Files.createTempDirectory(null).toFile();
         File tableDir = new File(tempDir, tableName);
         File transactionLogDir = new File(tableDir, TRANSACTION_LOG_DIRECTORY);
@@ -526,9 +529,6 @@ public class TestTransactionLogAccess
         copyTransactionLogEntry(0, 12, resourceDir, transactionLogDir);
         Files.copy(new File(resourceDir, LAST_CHECKPOINT_FILENAME).toPath(), new File(transactionLogDir, LAST_CHECKPOINT_FILENAME).toPath());
 
-        setupTransactionLogAccess(tableName, tableDir.toURI().toString());
-        List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-
         Set<String> originalDataFiles = ImmutableSet.of(
                 "age=42/part-00000-b26c891a-7288-4d96-9d3b-bef648f12a34.c000.snappy.parquet",
                 "age=25/part-00001-aceaf062-1cd1-45cb-8f83-277ffebe995c.c000.snappy.parquet",
@@ -541,32 +541,36 @@ public class TestTransactionLogAccess
                 "age=21/part-00000-3d546786-bedc-407f-b9f7-e97aa12cce0f.c000.snappy.parquet",
                 "age=30/part-00000-37ccfcd3-b44b-4d04-a1e6-d2837da75f7a.c000.snappy.parquet");
 
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), originalDataFiles);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000010.checkpoint.parquet", 2,
-                        // the file is accessed once when the transaction log tail is created
-                        // and then it tries to access the following file but that file does not
-                        // exist so it knows that it has reached the end of the tail
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir.toURI().toString());
+                    List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), originalDataFiles);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
 
         copyTransactionLogEntry(12, 14, resourceDir, transactionLogDir);
         Set<String> newDataFiles = ImmutableSet.of(
                 "age=28/part-00000-40dd1707-1d42-4328-a59a-21f5c945fe60.c000.snappy.parquet",
                 "age=29/part-00000-3794c463-cb0c-4beb-8d07-7cc1e3b5920f.c000.snappy.parquet");
-        TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir.toURI().toString(), SESSION);
-        activeDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, SESSION);
-        assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), union(originalDataFiles, newDataFiles));
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000010.checkpoint.parquet", 2,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 3,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    TableSnapshot updatedTableSnapshot = transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir.toURI().toString(), SESSION);
+                    List<AddFileEntry> activeDataFiles = transactionLogAccess.getActiveFiles(updatedTableSnapshot, SESSION);
+                    assertEqualsIgnoreOrder(activeDataFiles.stream().map(AddFileEntry::getPath).collect(Collectors.toSet()), union(originalDataFiles, newDataFiles));
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 2)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 2)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
     }
 
     @Test
@@ -599,7 +603,7 @@ public class TestTransactionLogAccess
         }
 
         assertEquals(expectedDataFiles.size(), dataFilesWithFixedVersion.size());
-        List<ColumnMetadata> columns = extractColumnMetadata(transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION).get(), TESTING_TYPE_MANAGER);
+        List<ColumnMetadata> columns = extractColumnMetadata(transactionLogAccess.getMetadataEntry(tableSnapshot, SESSION), TESTING_TYPE_MANAGER);
         for (int i = 0; i < expectedDataFiles.size(); i++) {
             AddFileEntry expected = expectedDataFiles.get(i);
             AddFileEntry actual = dataFilesWithFixedVersion.get(i);
@@ -705,25 +709,31 @@ public class TestTransactionLogAccess
         String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
         DeltaLakeConfig cacheDisabledConfig = new DeltaLakeConfig();
         cacheDisabledConfig.setMetadataCacheTtl(new Duration(0, TimeUnit.SECONDS));
-        setupTransactionLogAccess(tableName, tableDir, cacheDisabledConfig);
 
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, cacheDisabledConfig);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
 
         // With the transaction log cache disabled, when loading the snapshot again, all the needed files will be opened again
-        transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir.toString(), SESSION);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 2,
-                        "00000000000000000011.json", 2,
-                        "00000000000000000012.json", 2,
-                        "00000000000000000013.json", 2,
-                        "00000000000000000014.json", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir, SESSION);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .build());
     }
 
     @Test
@@ -734,30 +744,74 @@ public class TestTransactionLogAccess
         String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(10, TimeUnit.MINUTES));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
 
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
         // The internal data cache should still contain the data files for the table
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.of());
+    }
+
+    @Test
+    public void testFlushSnapshotAndActiveFileCache()
+            throws Exception
+    {
+        String tableName = "person";
+        String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
+        DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
+        shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(10, TimeUnit.MINUTES));
+
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
+
+        // Flush all cache and then load snapshot and get active files
+        transactionLogAccess.flushCache();
+        assertFileSystemAccesses(
+                () -> {
+                    transactionLogAccess.loadSnapshot(new SchemaTableName("schema", tableName), tableDir, SESSION);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
     }
 
     @Test
@@ -768,31 +822,34 @@ public class TestTransactionLogAccess
         String tableDir = getClass().getClassLoader().getResource("databricks/" + tableName).toURI().toString();
         DeltaLakeConfig shortLivedActiveDataFilesCacheConfig = new DeltaLakeConfig();
         shortLivedActiveDataFilesCacheConfig.setDataFileCacheTtl(new Duration(0, TimeUnit.SECONDS));
-        setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
 
-        List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 2));
+        assertFileSystemAccesses(
+                () -> {
+                    setupTransactionLogAccess(tableName, tableDir, shortLivedActiveDataFilesCacheConfig);
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("_last_checkpoint", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000011.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000012.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000013.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000014.json", INPUT_FILE_NEW_STREAM), 1)
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
 
         // With no caching for the transaction log entries, when loading the snapshot again,
         // the checkpoint file will be read again
-        addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
-        assertEquals(addFileEntries.size(), 12);
-        assertThat(accessTrackingFileSystemFactory.getOpenCount()).containsExactlyInAnyOrderEntriesOf(
-                ImmutableMap.of(
-                        "_last_checkpoint", 1,
-                        "00000000000000000011.json", 1,
-                        "00000000000000000012.json", 1,
-                        "00000000000000000013.json", 1,
-                        "00000000000000000014.json", 1,
-                        "00000000000000000010.checkpoint.parquet", 4));
+        assertFileSystemAccesses(
+                () -> {
+                    List<AddFileEntry> addFileEntries = transactionLogAccess.getActiveFiles(tableSnapshot, SESSION);
+                    assertEquals(addFileEntries.size(), 12);
+                },
+                ImmutableMultiset.<FileOperation>builder()
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_GET_LENGTH), 4) // TODO (https://github.com/trinodb/trino/issues/16775) why not e.g. once?
+                        .addCopies(new FileOperation("00000000000000000010.checkpoint.parquet", INPUT_FILE_NEW_STREAM), 2)
+                        .build());
     }
 
     private void copyTransactionLogEntry(int startVersion, int endVersion, File sourceDir, File targetDir)
@@ -806,5 +863,38 @@ public class TestTransactionLogAccess
             String lastTransactionName = format("%020d.json", i);
             Files.copy(new File(sourceDir, lastTransactionName).toPath(), new File(targetDir, lastTransactionName).toPath());
         }
+    }
+
+    private void assertFileSystemAccesses(ThrowingRunnable callback, Multiset<FileOperation> expectedAccesses)
+            throws Exception
+    {
+        trackingFileSystemFactory.reset();
+        callback.run();
+        assertThat(getOperations()).containsExactlyInAnyOrderElementsOf(expectedAccesses);
+    }
+
+    private Multiset<FileOperation> getOperations()
+    {
+        return trackingFileSystemFactory.getOperationCounts()
+                .entrySet().stream()
+                .flatMap(entry -> nCopies(entry.getValue(), new FileOperation(
+                        entry.getKey().getFilePath().replaceFirst(".*/_delta_log/", ""),
+                        entry.getKey().getOperationType())).stream())
+                .collect(toCollection(HashMultiset::create));
+    }
+
+    private record FileOperation(String path, TrackingFileSystemFactory.OperationType operationType)
+    {
+        FileOperation
+        {
+            requireNonNull(path, "path is null");
+            requireNonNull(operationType, "operationType is null");
+        }
+    }
+
+    private interface ThrowingRunnable
+    {
+        void run()
+                throws Exception;
     }
 }
